--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,12 @@
     <url>git@github.com/forcedotcom/wsc</url>
   </scm>
   <developers>
-    <!-- see mailing list -->
+    <developer>
+      <name>EAPI-Frameworks</name>
+      <email>apiscrumteam@salesforce.com</email>
+      <organization>Salesforce</organization>
+      <organizationUrl>https://www.salesforce.com</organizationUrl>
+    </developer>
   </developers>
   <mailingLists>
     <mailingList>
