Change team name

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   </scm>
   <developers>
     <developer>
-      <name>EAPI-Frameworks</name>
+      <name>Enterprise API Team</name>
       <email>apiscrumteam@salesforce.com</email>
       <organization>Salesforce</organization>
       <organizationUrl>https://www.salesforce.com</organizationUrl>
