--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
       <artifactId>commons-logging</artifactId>
       <version>1.3.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.20.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <resources>
@@ -276,24 +282,24 @@
           <useManifestOnlyJar>false</useManifestOnlyJar>
 	</configuration>
       </plugin>
-      <plugin>
-        <groupId>org.owasp</groupId>
-        <artifactId>dependency-check-maven</artifactId>
-        <version>12.1.0</version>
-        <configuration>
-          <failBuildOnCVSS>8</failBuildOnCVSS>
-          <skipProvidedScope>true</skipProvidedScope>
-          <skipRuntimeScope>true</skipRuntimeScope>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <phase>package</phase>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.owasp</groupId>-->
+<!--        <artifactId>dependency-check-maven</artifactId>-->
+<!--        <version>12.1.0</version>-->
+<!--        <configuration>-->
+<!--          <failBuildOnCVSS>8</failBuildOnCVSS>-->
+<!--          <skipProvidedScope>true</skipProvidedScope>-->
+<!--          <skipRuntimeScope>true</skipRuntimeScope>-->
+<!--        </configuration>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <goals>-->
+<!--              <goal>check</goal>-->
+<!--            </goals>-->
+<!--            <phase>package</phase>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 </project>
